--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,19 @@ Authors@R: c(
 Depends: zoo (>= 1.7-12)
 Imports: methods
 LinkingTo: zoo
-Suggests: timeSeries, timeDate, tseries, chron, fts, tis, RUnit
+Suggests: 
+    timeSeries,
+    timeDate,
+    tseries,
+    chron,
+    fts,
+    tis,
+    RUnit,
+    testthat (>= 3.0.0)
 LazyLoad: yes
 Description: Provide for uniform handling of R's different time-based data classes by extending zoo, maximizing native format information preservation and allowing for user level customization and extension, while simplifying cross-class interoperability.
 License: GPL (>= 2)
 URL: https://github.com/joshuaulrich/xts
 BugReports: https://github.com/joshuaulrich/xts/issues
 RoxygenNote: 7.1.2
+Config/testthat/edition: 3
